name:                  hm
version:               0.1.0.0
synopsis:              Hindley-Damas-Milner implementation
homepage:              https://github.com/thumphries/hm
license:               BSD3
license-file:          LICENSE
author:                Tim Humphries
maintainer:            tim@utf8.me
category:              Language
build-type:            Simple
extra-source-files:    README.md
cabal-version:         >=1.10

library
  exposed-modules:
                       Syntax
                       Type
  build-depends:
                       base                >=4.8 && <4.9
                     , containers
                     , text                == 1.2.*

  hs-source-dirs:      src
  default-language:    Haskell2010
